--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0.2rem;
+    background-color: #c2f4ee;
 }
 .heading {    
     background-color: black;
@@ -35,6 +36,7 @@ body {
     margin: 0.5rem;
     padding: 0;
     object-fit: cover;
+    border-radius: 15px;
 }
 
 .display-area {
@@ -47,12 +49,14 @@ body {
     position: relative; 
     max-width: 550px;
     width: 100%;
+
 }
 
 .image-container img {
     width: 100%;
     height: 335px;
     margin: 0.5rem 0;
+    border-radius: 15px;
 }
 
 .ramen-details {
@@ -65,7 +69,8 @@ body {
 .ramen-details h1,h2 {    
     background: rgba(255, 255, 255, 0.8);
     color: black;
-    padding: 1px;
+    padding: 3px;
+    border-radius: 10px;
 }
 
 #rating-and-comment {
@@ -79,6 +84,7 @@ body {
 
 #rating-and-comment h2,p {
     margin: 0.2rem 0;
+    background-color: #c2f4ee;
 }
 
 #rating-and-comment p {
@@ -101,6 +107,7 @@ body {
     margin-top: 1.5rem;
     text-align: center;
     width: 300px;
+    border-radius: 5px;
 }
 
 #ramen-form button {
@@ -108,9 +115,12 @@ body {
     background-color: black;
     color: whitesmoke;
     padding: 0.5rem;
-    margin-top: 1rem;
+    margin-top: 1.2rem;
+    margin-bottom: 1rem;
     text-align: center;
-    width: 300px;
+    width: 200px;
+    font-weight: bolder;
+    border-radius: 10px;
     cursor: pointer;
 }
 
